2007-03-04  Brian Bidulock  <bidulock@openss7.org>

	* AUTHORS: updates for release
	* NEWS: updates for release
	* README: updates for release
	* README-cvs: updates for release
	* THANKS: updates for release
	* debian/copyright: updates for release
	* doc/manual/news.texi: updates for release

	* strcompat.spec.in: do not propagate empty flags
	* debian/rules.in: do not propagate empty flags

2007-03-02  Brian Bidulock  <bidulock@openss7.org>

	* acinclude.m4: improvements to common build environment
	* doc/manual/news.texi: updates for release

	* src/kernel/aixcompat.c: versions for exports an GPL for OpenSS7 symbols
	* src/kernel/hpuxcompat.c: versions for exports an GPL for OpenSS7 symbols
	* src/kernel/irixcompat.c: versions for exports an GPL for OpenSS7 symbols
	* src/kernel/lfscompat.c: versions for exports an GPL for OpenSS7 symbols
	* src/kernel/liscompat.c: versions for exports an GPL for OpenSS7 symbols
	* src/kernel/maccompat.c: versions for exports an GPL for OpenSS7 symbols
	* src/kernel/mpscompat.c: versions for exports an GPL for OpenSS7 symbols
	* src/kernel/os7compat.c: versions for exports an GPL for OpenSS7 symbols
	* src/kernel/osfcompat.c: versions for exports an GPL for OpenSS7 symbols
	* src/kernel/suncompat.c: versions for exports an GPL for OpenSS7 symbols
	* src/kernel/svr3compat.c: versions for exports an GPL for OpenSS7 symbols
	* src/kernel/svr4compat.c: versions for exports an GPL for OpenSS7 symbols
	* src/kernel/uw7compat.c: versions for exports an GPL for OpenSS7 symbols

2007-02-28  Brian Bidulock  <bidulock@openss7.org>

	* acinclude.m4: #ifdef instead of #if
	* doc/manual/news.texi: updates and corrections
	* doc/manual/releases.texi: updates and corrections
	* doc/manual/rpm.texi: updates and corrections
	* doc/manual/strcompat.texi: updates and corrections
	* doc/manual/tree.texi: updates and corrections

2007-02-21  Brian Bidulock  <bidulock@openss7.org>

	* src/include/sys/mac/stream.h: added improved mi_open allocation